# JTX-PathTracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/L2DFileDialog/: L2DFileDialog.h
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/imfilebrowser/: imfilebrowser.h
ext/jtxlib/src/jtxlib/math/: math.hpp
src/: aabb.hpp  bvh.cpp  bvh.hpp  bxdf.hpp  camera.cpp  camera.hpp  color.hpp  display.cpp  display.hpp  engine.cpp  engine.hpp  filter.hpp  hit.hpp  hittable.hpp  hittablelist.hpp  image.cpp  image.hpp  integrator.cpp  integrator.hpp  interval.hpp  loader.cpp  loader.hpp  main.cpp  material.hpp  mesh.cpp  mesh.hpp  primitives.hpp  rand.cpp  rand.hpp  rt.hpp  rtx.hpp  sampler.hpp  sampling.hpp  scene.cpp  scene.hpp  sphere.hpp
src/assets/: shaderball.mtl
src/assets/scenes/shaderball/: README.md
src/assets/shaderball/: README.md  shaderball.mtl  shaderball_hsd.mtl
src/bsdf/: bxdf.cpp  bxdf.hpp  conductor.hpp  dielectric.hpp  diffuse.hpp  disney.hpp  gltf.hpp  microfacet.hpp
src/cuda/: image.hpp  main.cu  otter.hpp
src/lights/: lights.hpp
src/primitives/: sphere.hpp
src/util/: aabb.cpp  aabb.hpp  color.hpp  complex.hpp  hash.hpp  interval.cpp  interval.hpp  rand.cpp  rand.hpp
